--- a/Flagrum.Web/Features/ModLibrary/Stats/StyleEdit.razor
+++ b/Flagrum.Web/Features/ModLibrary/Stats/StyleEdit.razor
@@ -18,6 +18,14 @@
                         <Textbox Rows="5" Size="Textbox.Variant.Stretch" @bind-Value="Parent.Mod.Description"/>
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <label>GEAR MENU TITLE</label>
+                    </td>
+                    <td colspan="7" class="pl-4">
+                        <Textbox Size="Textbox.Variant.Stretch" @bind-Value="Parent.Mod.GameMenuTitle"/>
+                    </td>
+                </tr>
             </table>
         </div>
     </EditForm>
