--- a/Flagrum.Web/Layout/MainLayout.razor
+++ b/Flagrum.Web/Layout/MainLayout.razor
@@ -1,6 +1,7 @@
 ﻿@inherits LayoutComponentBase
 @inject AppStateService AppState
 @inject Settings Settings
+@inject JSInterop Interop
 
 <div class="flex flex-row h-full">
     @if (Settings.IsReady)
