--- a/Flagrum.Web/App.razor
+++ b/Flagrum.Web/App.razor
@@ -1,3 +1,5 @@
+@inject JSInterop Interop
+
 <Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
