--- a/Flagrum.Web/Components/Controls/IntSelect.razor
+++ b/Flagrum.Web/Components/Controls/IntSelect.razor
@@ -1,6 +1,6 @@
 ﻿<select value="@Value"
         @onchange="OnOptionSelected"
-        class="border border-grey-700 m-0 p-2 bg-dark-600 text-grey-400 rounded w-full @CssClass">
+        class="input bg-dark-550 w-full @CssClass">
     @if (Placeholder != null)
     {
         <option value="-1">@Placeholder</option>
