--- a/Flagrum.Web/Features/ModLibrary/Components/ModListingGroup.razor
+++ b/Flagrum.Web/Features/ModLibrary/Components/ModListingGroup.razor
@@ -1,52 +1,32 @@
 ﻿@inject AppStateService AppState
+@inject JSInterop Interop
 
-@if (AppState.Mods.Any(m => m.IsWorkshopMod == IsWorkshopMod))
-{
-    @*<div class="mx-6 rounded bg-dark-600 p-3 shadow-md row mt-4 cursor-pointer" @onclick="Expand">
-        <span class="material-icons-outlined">@(IsExpanded ? "expand_less" : "expand_more")</span>
-        <span class="font-bold text-grey-400 ml-2">@Name</span>
-    </div>*@
-    <h5 class="font-display font-bold text-grey-300 mx-8">@Name</h5>
-    @if (IsExpanded)
+<CascadingValue Value="this">
+    @foreach (var mod in Mods)
     {
-        <CascadingValue Value="this">
-            <div class="row flex-wrap px-4 ml-0.5 mb-10">
-                @foreach (var mod in Mods
-                    .Where(m => m.Target == Target)
-                    .OrderByDescending(m => m.IsApplyToGame)
-                    .ThenBy(m => m.GameMenuTitle ?? m.WorkshopTitle))
-                {
-                    <ModListingCard @key="mod.Uuid" Mod="@mod"/>
-                }
-            </div>
-        </CascadingValue>
+        <ModListingCard @key="mod.Uuid" Mod="mod"/>
     }
-}
+</CascadingValue>
 
 @code
 {
     [Parameter]
-    public string Name { get; set; }
-
-    [Parameter]
-    public bool IsWorkshopMod { get; set; }
-
-    [Parameter]
-    public int Target { get; set; }
-
-    [Parameter]
     public IEnumerable<Binmod> Mods { get; set; }
 
-    private bool IsExpanded { get; set; } = true;
+    private List<ModListingCard> Children { get; set; } = new();
 
-    protected override void OnInitialized()
-    {
-        IsExpanded = !IsWorkshopMod;
-    }
+    // protected override async Task OnAfterRenderAsync(bool firstRender)
+    // {
+    //     await base.OnAfterRenderAsync(firstRender);
+    //     foreach (var uuid in Children.Select(c => c.Mod.Uuid).ToList())
+    //     {
+    //         await Interop.SetBackgroundImage(uuid);
+    //     }
+    // }
 
-    private void Expand()
+    public void AddChild(ModListingCard child)
     {
-        IsExpanded = !IsExpanded;
+        Children.Add(child);
     }
 
     public void CallStateHasChanged()
